# ambacoding-be

./: README.md
fastapi-supabase-app/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
fastapi-supabase-app/alembic/: env.py
fastapi-supabase-app/alembic/versions/: 0001_create_users_table.py
fastapi-supabase-app/src/: main.py
fastapi-supabase-app/src/app/: deps.py
fastapi-supabase-app/src/app/api/v1/: __init__.py
fastapi-supabase-app/src/app/api/v1/endpoints/: auth.py  items.py  users.py
fastapi-supabase-app/src/app/auth/: deps.py  jwt.py  service.py
fastapi-supabase-app/src/app/crud/: user.py
fastapi-supabase-app/src/app/db/: session.py  supabase_client.py
fastapi-supabase-app/src/app/middlewares/: auth_middleware.py
fastapi-supabase-app/src/app/models/: user.py
fastapi-supabase-app/src/app/schemas/: user.py
fastapi-supabase-app/src/app/seeds/: seed_users.py
fastapi-supabase-app/src/tests/: conftest.py  test_users.py
