[tool]
name = "fastapi-supabase-app"
version = "0.1.0"
description = "A FastAPI application using Supabase PostgreSQL as the database."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
alembic = "^1.7.5"
httpx = "^0.21.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
supabase = "^0.0.1"  # Adjust the version as necessary
passlib = "^1.7.4"  # For password hashing
python-jose = "^3.3.0"  # For JWT handling

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.21.1"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"